--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body {
   width: 100%;
   height: 100%;
   font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 header {
@@ -20,52 +23,59 @@ header {
   background-color: #00205b;
   color: #fff;
   display: flex;
-  justify-content: space-around;
-  padding: 1.5rem;
+  justify-content: center;
+  padding: 2% 0;
   font-size: 2rem;
-  font-weight: 700;
+  font-weight: 400;
 }
 
 .container {
-  margin-top: 5rem;
   width: 100%;
-  height: 400px;
+  height: 50vh;
   display: flex;
 }
-.img-container {
+.carousel {
   position: relative;
-  width: 75%;
+  width: 60%;
   height: 100%;
-  display: grid;
-  grid-template-rows: 49% 49%;
-  grid-template-columns: 1fr;
-  grid-column-gap: 1%;
-  grid-row-gap: 2%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
 }
-#row-1 {
-  display: grid;
-  grid-template-rows: 100%;
-  grid-template-columns: 0.75fr 0.75fr 0.5fr 0.75fr 1fr;
-  grid-column-gap: 1%;
+.slider-1 {
+  display: flex;
+  width: 370%;
+  height: 45%;
+  flex-shrink: 0;
+  transition: all 0.5s;
+  margin-bottom: 23px;
+  flex: 1;
+  transform: translate(-2.35%);
 }
-#row-2 {
-  display: grid;
-  grid-template-rows: 100%;
-  grid-template-columns: 0.75fr 1fr 0.75fr 0.5fr 0.75fr;
-  grid-column-gap: 1%;
+.slider-2 {
+  display: flex;
+  flex-direction: row;
+  width: 370%;
+  height: 45%;
+  flex-shrink: 0;
+  transition: all 0.5s;
+  flex: 1;
 }
-.text-container {
-  width: 24%;
+.img {
+  flex-basis: 11%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
 img {
-  width: 100%;
+  width: 97%;
   height: 100%;
   border-radius: 0.4rem;
 }
 .arrows-container {
   z-index: 100;
-  width: 18%;
+  width: 20%;
   height: 49%;
   background-color: #fff;
   position: absolute;
@@ -78,7 +88,7 @@ img {
 #left-arrow,
 #right-arrow {
   height: 25%;
-  width: 40%;
+  width: 35%;
   margin-left: 0 auto;
   display: flex;
   justify-content: center;
@@ -86,6 +96,11 @@ img {
   margin-bottom: 5%;
   border: 2.5px solid lightgray;
   border-radius: 0.4rem;
+  cursor: pointer;
+}
+#left-arrow:hover,
+#right-arrow:hover {
+  border: 2.5px solid lightskyblue;
 }
 
 #left-arrow i,
@@ -93,4 +108,27 @@ img {
   align-self: center;
   transform: scale(2);
   color: lightgray;
+}
+
+.text-container {
+  width: 39%;
+  padding: 0 1%;
+}
+.text-container h1 {
+  margin-top: 0;
+  font-size: 2.2em;
+  color: #134880;
+}
+
+.text-container p {
+  font-size: 1.3em;
+}
+footer {
+  display: flex;
+  justify-content: center;
+  background-color: #00205b;
+  color: white;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  padding: 2% 0;
 }
